# obs-studio

./: .gitmodules  CMakeLists.txt  README.rst  RunOBS.bat  restore_and_run.bat
.github/workflows/: docs.yml  main.yml
CI/: build-windows.ps1
CI/windows/: 03_package_obs.ps1  04_package_obs_static_version.ps1
UI/: CMakeLists.txt  api-interface.cpp  media-controls.cpp  obs-app.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp  window-projector.cpp  window-projector.hpp
UI/forms/: OBSBasicSettings.ui
UI/forms/source-toolbar/: media-controls.ui
UI/obs-frontend-api/: obs-frontend-api.cpp  obs-frontend-api.h  obs-frontend-internal.hpp
cmake/Modules/: CompilerConfig.cmake
libobs/: CMakeLists.txt  obs-source.c  obs-source.h  obs.c  obs.h
libobs/cmake/: legacy.cmake  os-windows.cmake
libobs/util/: platform.c  platform.h
libobs/util/windows/: custom_patch.c  custom_patch.h  window-helpers.c
plugins/: CMakeLists.txt
plugins/aeindus-custom/: .editorconfig  CMakeLists.txt  JWManager.cpp  JWManager.hpp  ZoomManager.cpp  ZoomManager.hpp  plugin-macros.generated.hpp  plugin-macros.hpp.in  plugin-main.cpp  util.cpp  util.hpp
plugins/image-source/: obs-slideshow.c
plugins/vlc-video/: vlc-video-plugin.c  vlc-video-plugin.h  vlc-video-source.c
plugins/win-capture/: CMakeLists.txt  custom_patch.c  custom_patch.h  window-capture.c
plugins/win-capture-audio/: .gitignore  CMakeLists.txt
